--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 @import "tailwindcss";
 
+@theme {
+    --font-zen: "Zen Dots"
+}
