--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --font-zen: "Zen Dots";
+  --font-orbitron: "Orbitron";
   --font-space: "Space Mono";
 }
